--- a/inner-page.html
+++ b/inner-page.html
@@ -60,10 +60,12 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto " href="#hero">Home</a></li>
+          <li><a class="nav-link scrollto" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link scrollto " href="#portfolio">Accommodatie</a></li>
+          <li><a class="nav-link scrollto" href="#portfolio">Accommodatie</a></li>
+          <li><a class="nav-link scrollto" href="#Omgeving">Omgeving</a></li>
           <li><a class="nav-link scrollto" href="#pricing">Reserveren</a></li>
+          <li><a class="nav-link scrollto" href="#faq">faq</a></li>
           <li><a class="nav-link scrollto" href="#team">Contact</a></li>
             <ul>
               
@@ -127,7 +129,9 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Home</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">About us</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Accomondatie</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">Omgeving</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Reserveren</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="#">FAQ</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Contact</a></li>
             </ul>
           </div>
